--- a/sdk/build.gradle
+++ b/sdk/build.gradle
@@ -1,23 +1,20 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'kotlin-android'
+    id 'maven-publish'
 }
 
 android {
-    compileSdk 31
+    compileSdk 30
 
     defaultConfig {
-        applicationId "com.she.example.sdk"
-        minSdk 21
-        targetSdk 31
+        minSdk 16
+        targetSdk 30
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-    }
-
-    buildFeatures {
-        viewBinding = true
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
@@ -37,13 +34,28 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.8.0'
-    implementation 'androidx.appcompat:appcompat:1.4.2'
-    implementation 'com.google.android.material:material:1.6.1'
+    implementation android_library.androidx_core_ktx
+    implementation android_library.androidx_appcompat
+    implementation android_library.material
+
+    implementation koin_android_library
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    implementation project(path: ':sdk')
+}
 
+afterEvaluate {
+    publishing {
+        publications {
+            release(MavenPublication) {
+                from components.release
+
+                groupId = 'com.github.faizfiaz'
+                artifactId = 'sehatq-sdk'
+                version = '0.0.0'
+            }
+        }
+    }
 }
